Add support for Sonarqube 9.0
Sonarqube 9.0 introduced a call from each project's DevOps configuration page to a validation endpoint for confirming that a project's ALM configuration works correctly, as well as endpoints for adding and updating Bitbucket Cloud endpoints.

As the Bitbucket Cloud endpoints conflict with the equivalent endpoints provided by the plugin, the relevant endpoints and supporting code have been removed from the plugin. An implementation for the new validation endpoint has been introduced, plus validators for everything other than Azure DevOps which requires a wider refactor so has a default 'valid' response', as well as implementation for each validator, plus a refactor to move each ALM's client into a common location shared between the decorators and validators.

The Sonarqube libraries now contains Java 11 bytecode, so the Java 8 restrictions and build settings in this project have been removed, and various method calls have been modified to make use of the Java 11 APIs, such as direct use of Charsets whilst encoding, and checking for empty optionals.